--- a/src/MainTest.form
+++ b/src/MainTest.form
@@ -290,42 +290,24 @@
               </component>
             </children>
           </grid>
-          <tabbedpane id="19a21" binding="tabbedPane1" default-binding="true">
+          <grid id="2c857" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="제목 없음"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children>
-              <grid id="7633c" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <tabbedpane title="제목 없음"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </grid>
-            </children>
-          </tabbedpane>
-          <tabbedpane id="8e02f" binding="tabbedPane2" default-binding="true">
+            <children/>
+          </grid>
+          <grid id="bdab9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="제목 없음"/>
             </constraints>
             <properties/>
             <border type="none"/>
-            <children>
-              <grid id="5617f" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="0" left="0" bottom="0" right="0"/>
-                <constraints>
-                  <tabbedpane title="제목 없음"/>
-                </constraints>
-                <properties/>
-                <border type="none"/>
-                <children/>
-              </grid>
-            </children>
-          </tabbedpane>
+            <children/>
+          </grid>
         </children>
       </tabbedpane>
       <grid id="6c6ac" binding="btnjp" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
