--- a/src/MainTest.form
+++ b/src/MainTest.form
@@ -14,7 +14,9 @@
             <preferred-size width="200" height="200"/>
           </grid>
         </constraints>
-        <properties/>
+        <properties>
+          <enabled value="true"/>
+        </properties>
         <border type="none"/>
         <children>
           <grid id="a625e" binding="userAdminJp" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
@@ -298,7 +300,7 @@
           <grid id="7b2f0" binding="qnaJp" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <tabbedpane title="문의사항 관리"/>
+              <tabbedpane title="문의사항관리"/>
             </constraints>
             <properties/>
             <border type="none"/>
