--- a/src/MainTest.form
+++ b/src/MainTest.form
@@ -264,7 +264,7 @@
                   <grid row="1" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="월/일 ~ 월/일"/>
+                  <text value=""/>
                 </properties>
               </component>
               <component id="5d826" class="javax.swing.JRadioButton" binding="dayRB">
