--- a/src/MainTest.form
+++ b/src/MainTest.form
@@ -17,7 +17,7 @@
         <properties/>
         <border type="none"/>
         <children>
-          <grid id="a625e" binding="userAdminJp" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="a625e" binding="userAdminJp" layout-manager="GridLayoutManager" row-count="4" column-count="12" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="회원정보관리"/>
@@ -37,7 +37,7 @@
               </component>
               <component id="2917a" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="회원 상세 정보"/>
@@ -46,15 +46,15 @@
               <grid id="ea757" binding="userInfoPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
-                  <grid row="1" column="6" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="10" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
                   <component id="970c5" class="javax.swing.JTextField" binding="nameField">
                     <constraints>
-                      <grid row="0" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                      <grid row="0" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="15" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -63,8 +63,8 @@
                   </component>
                   <component id="4148a" class="javax.swing.JTextField" binding="idField">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                      <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="15" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -73,8 +73,8 @@
                   </component>
                   <component id="999fc" class="javax.swing.JTextField" binding="carField">
                     <constraints>
-                      <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                      <grid row="3" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="15" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -83,8 +83,8 @@
                   </component>
                   <component id="725a1" class="javax.swing.JTextField" binding="numberField">
                     <constraints>
-                      <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                      <grid row="4" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="15" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -93,8 +93,8 @@
                   </component>
                   <component id="1c337" class="javax.swing.JTextField" binding="cardField">
                     <constraints>
-                      <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="150" height="-1"/>
+                      <grid row="5" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                        <preferred-size width="15" height="-1"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -153,7 +153,9 @@
                   </component>
                   <component id="53c1b" class="javax.swing.JButton" binding="deleteUserButton">
                     <constraints>
-                      <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                      <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+                        <preferred-size width="30" height="-1"/>
+                      </grid>
                     </constraints>
                     <properties>
                       <text value="계정 삭제"/>
@@ -162,7 +164,7 @@
                   <component id="a6d40" class="javax.swing.JButton" binding="changeUserButton">
                     <constraints>
                       <grid row="6" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-                        <preferred-size width="93" height="30"/>
+                        <preferred-size width="30" height="30"/>
                       </grid>
                     </constraints>
                     <properties>
@@ -173,7 +175,7 @@
               </grid>
               <component id="71024" class="javax.swing.JLabel">
                 <constraints>
-                  <grid row="2" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="10" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="회원 주차 이력"/>
@@ -181,7 +183,7 @@
               </component>
               <scrollpane id="d9d34" binding="userScrollPane" custom-create="true">
                 <constraints>
-                  <grid row="1" column="0" row-span="3" col-span="6" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="1" column="0" row-span="3" col-span="10" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -194,7 +196,7 @@
               </scrollpane>
               <scrollpane id="d6b81" binding="userParkingScrollPane" custom-create="true">
                 <constraints>
-                  <grid row="3" column="6" row-span="1" col-span="1" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="10" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
@@ -314,7 +316,7 @@
               <component id="95ab5" class="javax.swing.JTextField" binding="qnaTitleField">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -324,7 +326,7 @@
               <component id="fe479" class="javax.swing.JTextArea" binding="qnaContensArea">
                 <constraints>
                   <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
+                    <preferred-size width="50" height="50"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -366,7 +368,7 @@
               <component id="37cf6" class="javax.swing.JTextField" binding="qnaIDField">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -399,7 +401,7 @@
               <component id="a13be" class="javax.swing.JTextField" binding="noticeTitleField">
                 <constraints>
                   <grid row="0" column="3" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="-1"/>
+                    <preferred-size width="50" height="-1"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -409,7 +411,7 @@
               <component id="39538" class="javax.swing.JTextArea" binding="noticeContentsArea">
                 <constraints>
                   <grid row="1" column="3" row-span="2" col-span="2" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-                    <preferred-size width="150" height="50"/>
+                    <preferred-size width="50" height="50"/>
                   </grid>
                 </constraints>
                 <properties>
@@ -419,7 +421,9 @@
               </component>
               <component id="78689" class="javax.swing.JButton" binding="noticeDeleteButton">
                 <constraints>
-                  <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="4" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="5" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <text value="삭제"/>
@@ -427,7 +431,9 @@
               </component>
               <component id="78166" class="javax.swing.JButton" binding="noticeChangeButton">
                 <constraints>
-                  <grid row="3" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="3" row-span="2" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="5" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <text value="수정"/>
@@ -435,7 +441,9 @@
               </component>
               <component id="73384" class="javax.swing.JButton" binding="noticeAddButton">
                 <constraints>
-                  <grid row="3" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="1" row-span="2" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="5" height="-1"/>
+                  </grid>
                 </constraints>
                 <properties>
                   <text value="추가"/>
