--- a/src/MainTest.form
+++ b/src/MainTest.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="jp" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="653" height="714"/>
+      <xy x="20" y="20" width="773" height="714"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -196,7 +196,9 @@
               </scrollpane>
               <scrollpane id="d6b81" binding="userParkingScrollPane" custom-create="true">
                 <constraints>
-                  <grid row="3" column="10" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="3" column="10" row-span="1" col-span="2" vsize-policy="6" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="-1" height="150"/>
+                  </grid>
                 </constraints>
                 <properties/>
                 <border type="none"/>
