--- a/src/AdminMain.form
+++ b/src/AdminMain.form
@@ -281,7 +281,7 @@
                   </component>
                 </children>
               </scrollpane>
-              <component id="30f07" class="javax.swing.JTextField" binding="total" custom-create="true">
+              <component id="30f07" class="javax.swing.JTextField" binding="total">
                 <constraints>
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                     <preferred-size width="5" height="-1"/>
