--- a/src/AdminMain.form
+++ b/src/AdminMain.form
@@ -281,16 +281,6 @@
                   </component>
                 </children>
               </scrollpane>
-              <component id="30f07" class="javax.swing.JTextField" binding="total">
-                <constraints>
-                  <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                    <preferred-size width="5" height="-1"/>
-                  </grid>
-                </constraints>
-                <properties>
-                  <editable value="false"/>
-                </properties>
-              </component>
               <component id="7065f" class="javax.swing.JRadioButton" binding="halfRB">
                 <constraints>
                   <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -305,6 +295,14 @@
                 </constraints>
                 <properties>
                   <text value="1년"/>
+                </properties>
+              </component>
+              <component id="eca38" class="javax.swing.JLabel" binding="total">
+                <constraints>
+                  <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Label"/>
                 </properties>
               </component>
             </children>
@@ -486,7 +484,9 @@
                 <children>
                   <component id="11738" class="javax.swing.JTable" binding="noticeJTable" custom-create="true">
                     <constraints/>
-                    <properties/>
+                    <properties>
+                      <autoCreateRowSorter value="false"/>
+                    </properties>
                   </component>
                 </children>
               </scrollpane>
