--- a/src/AdminMain.form
+++ b/src/AdminMain.form
@@ -158,6 +158,7 @@
                       </grid>
                     </constraints>
                     <properties>
+                      <enabled value="false"/>
                       <text value="계정 삭제"/>
                     </properties>
                   </component>
@@ -168,6 +169,7 @@
                       </grid>
                     </constraints>
                     <properties>
+                      <enabled value="false"/>
                       <text value="계정 변경"/>
                     </properties>
                   </component>
@@ -358,6 +360,7 @@
                   <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="삭제"/>
                 </properties>
               </component>
@@ -366,6 +369,7 @@
                   <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="답변 작성"/>
                 </properties>
               </component>
@@ -440,6 +444,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="삭제"/>
                 </properties>
               </component>
@@ -450,6 +455,7 @@
                   </grid>
                 </constraints>
                 <properties>
+                  <enabled value="false"/>
                   <text value="수정"/>
                 </properties>
               </component>
